@@ -1,1 +1,11 @@
 # Dictionary-OOP
+Hướng dẫn clone : 
+--> Clone project bằng câu lệnh dưới đây: 
+https://github.com/quanhspdz/Dictionary-OOP.git
+
+Hướng dẫn build App: 
+- Run -> Edit Configurations... -> Add new run configuration... -> Application
+    Name: DictionaryApp
+    MainClass: App.DictionaryApp
+- Modify options --> Add VM options
+- VM options: --module-path "\path\to\openjfx-21.0.1_windows-x64_bin-sdk\javafx-sdk-21.0.1\lib" --add-modules javafx.controls,javafx.fxml,javafx.web
